--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@azure/msal-browser": "^3.30.0",
+    "@azure/msal-react": "^3.0.21",
     "@fluentui/react": "^8.119.0",
     "@fluentui/react-icons": "^2.0.239",
-    "@azure/msal-browser": "^3.11.1",
-    "@microsoft/microsoft-graph-client": "^3.0.7"
+    "@microsoft/microsoft-graph-client": "^3.0.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
