ci(swa): upload prebuilt dist (skip Oryx build)

--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -22,22 +22,17 @@ jobs:
         with:
           submodules: true
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: '9'
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'pnpm'
+          cache: 'npm'
 
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+      - name: Install dependencies (npm)
+        run: npm ci
 
-      - name: Build project
-        run: pnpm build
+      - name: Build project (npm)
+        run: npm run build
         env:
           VITE_CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
           VITE_TENANT_ID: ${{ secrets.VITE_TENANT_ID }}
@@ -53,6 +48,7 @@ jobs:
           action: "upload"
           app_location: "/"
           output_location: "dist"
+          skip_app_build: true
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
@@ -66,3 +62,4 @@ jobs:
           action: "close"
           app_location: "/"
           output_location: "dist"
+          skip_app_build: true
