--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -29,7 +29,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies (npm)
-        run: npm ci
+        run: npm install
 
       - name: Build project (npm)
         run: npm run build
