--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Install dependencies (npm)
         run: npm install
 
-      - name: Build project (npm)
-        run: npm run build
+      - name: Build project (vite)
+        run: npx vite build
         env:
           VITE_CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
           VITE_TENANT_ID: ${{ secrets.VITE_TENANT_ID }}
@@ -46,8 +46,8 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "/"
-          output_location: "dist"
+          app_location: "dist"
+          output_location: "."
           skip_app_build: true
 
   close_pull_request_job:
@@ -60,6 +60,7 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           action: "close"
-          app_location: "/"
-          output_location: "dist"
+          app_location: "dist"
+          output_location: "."
           skip_app_build: true
+          
