--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install dependencies (npm)
         run: npm ci --include=dev
 
+      - name: Ensure Vite plugins installed
+        run: npm install @vitejs/plugin-react --no-save
+
       - name: Build project (vite)
         run: npx vite build
         env:
