--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fluentui/react-icons": "^2.0.239",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
