--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Microsoft 365-integrated knowledge management application",
   "scripts": {
     "dev": "vite",
+    "dev:proxy": "node server/dev-proxy/index.js",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
@@ -25,9 +26,11 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "dotenv": "^17.2.3",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "express": "^5.1.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
