--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -46,14 +46,21 @@ jobs:
           VITE_DATAVERSE_API: ${{ secrets.VITE_DATAVERSE_API }}
           VITE_GRAPH_SCOPES: ${{ secrets.VITE_GRAPH_SCOPES }}
 
+      - name: Inspect build output
+        run: |
+          echo "-- ls -la dist --"
+          ls -la dist || echo "dist not found"
+
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "dist"
-          output_location: "."
+          # app_location should be the repository root (or '.'), and output_location should point
+          # to the built artifact folder (Vite outputs to 'dist'). Previously these were reversed.
+          app_location: "."
+          output_location: "dist"
           skip_app_build: true
 
   close_pull_request_job:
