--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -57,10 +57,8 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          # app_location should be the repository root (or '.'), and output_location should point
-          # to the built artifact folder (Vite outputs to 'dist'). Previously these were reversed.
-          app_location: "."
-          output_location: "dist"
+          # Upload the built artifact folder only to avoid sending the whole repository.
+          app_location: "dist"
           skip_app_build: true
 
   close_pull_request_job:
@@ -74,6 +72,5 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           action: "close"
           app_location: "dist"
-          output_location: "."
           skip_app_build: true
           
