--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -22,14 +22,16 @@ jobs:
         with:
           submodules: true
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Setup Node.js (20.x)
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20.x'
           cache: 'npm'
 
       - name: Install dependencies (npm)
-        run: npm ci --include=dev
+        run: |
+          npm -v
+          npm ci --include=dev
 
       - name: Ensure Vite plugins installed
         run: |
@@ -38,7 +40,7 @@ jobs:
           echo "Installed/verified @vitejs/plugin-react"
 
       - name: Build project (vite)
-        run: npx vite build
+        run: npm run build
         env:
           VITE_CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
           VITE_TENANT_ID: ${{ secrets.VITE_TENANT_ID }}
