--- a/.github/workflows/pages-vite.yml
+++ b/.github/workflows/pages-vite.yml
@@ -22,15 +22,13 @@ jobs:
           node-version: '20.x'
           cache: 'npm'
 
-      - name: Enable Corepack and install dependencies (pnpm)
+      - name: Install dependencies (npm)
         run: |
-          corepack enable
-          corepack prepare pnpm@latest --activate
-          pnpm -v
-          pnpm install --frozen-lockfile
+          npm -v
+          npm ci --include=dev
 
-      - name: Build (pnpm)
-        run: pnpm build
+      - name: Build (npm)
+        run: npm run build
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
