--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -64,6 +64,19 @@ jobs:
             echo "No staticwebapp.config.json found in repo root"
           fi
 
+      - name: Sanity check SWA secret and build artifact
+        if: always()
+        run: |
+          echo "Checking Azure Static Web Apps API token presence..."
+          if [ -z "${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}" ]; then
+            echo "ERROR: AZURE_STATIC_WEB_APPS_API_TOKEN is not set in repository secrets. The deploy action will fail." >&2
+            exit 2
+          else
+            echo "AZURE_STATIC_WEB_APPS_API_TOKEN appears set (masked)."
+          fi
+          echo "Checking dist/ contents (first 50 entries):"
+          ls -la dist | head -n 50 || true
+
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
